# examplecpp

./: .gitignore  CMakeLists.txt  templatecppproject.kdev4
.kdev4/: doctorpool.kdev4  templatecppproject.kdev4
3rd/boost/: CMakeLists.txt
3rd/boost/boost/config/platform/: linux.hpp  win32.hpp
3rd/json11/: CMakeLists.txt  json11.cpp  json11.hpp
3rd/libodb-2.4.0/: CMakeLists.txt
3rd/libodb-2.4.0/odb/: CMakeLists.txt  connection.hxx  connection.ixx  database.hxx  database.ixx  pointer-traits.hxx  wrapper-traits.hxx
3rd/libodb-2.4.0/odb/boost/: libodb-boost-vc10.vcxproj  libodb-boost-vc10.vcxproj.filters  libodb-boost-vc11.vcxproj  libodb-boost-vc12.vcxproj  libodb-boost-vc8.vcproj  libodb-boost-vc9.vcproj
3rd/libodb-2.4.0/odb/boost/details/: config.h
3rd/libodb-2.4.0/odb/details/: transfer-ptr.hxx
3rd/libodb-2.4.0/odb/details/shared-ptr/: base.cxx  base.hxx  base.ixx
3rd/libodb-mysql-2.4.0/: CMakeLists.txt  libodb-mysql-vc10.sln  libodb-mysql-vc11.sln  libodb-mysql-vc12.sln  libodb-mysql-vc8.sln  libodb-mysql-vc9.sln
3rd/libodb-mysql-2.4.0/odb/mysql/: CMakeLists.txt  libodb-mysql-vc10.vcxproj  libodb-mysql-vc11.vcxproj  libodb-mysql-vc11.vcxproj.filters  libodb-mysql-vc12.vcxproj  libodb-mysql-vc8.vcproj  libodb-mysql-vc9.vcproj
3rd/libodb-mysql-2.4.0/odb/mysql/details/: config.hxx
3rd/libodb-pgsql-2.4.0/: CMakeLists.txt  libodb-pgsql-vc10.sln  libodb-pgsql-vc11.sln  libodb-pgsql-vc12.sln  libodb-pgsql-vc8.sln  libodb-pgsql-vc9.sln
3rd/libodb-pgsql-2.4.0/odb/pgsql/: CMakeLists.txt  auto-handle.hxx  binding.hxx  connection-factory.hxx  connection.hxx  database.hxx  error.hxx  exceptions.hxx  libodb-pgsql-vc10.vcxproj  libodb-pgsql-vc11.vcxproj  libodb-pgsql-vc11.vcxproj.filters  libodb-pgsql-vc12.vcxproj  libodb-pgsql-vc8.vcproj  libodb-pgsql-vc9.vcproj  prepared-query.hxx  query.hxx  simple-object-statements.hxx  statement-cache.hxx  statement.hxx  statements-base.hxx  tracer.hxx  traits.hxx  transaction-impl.hxx  transaction.hxx
3rd/libodb-pgsql-2.4.0/odb/pgsql/details/: endian-traits.hxx
3rd/libpq/: CMakeLists.txt
3rd/libpq/include/: pg_config_os.h
3rd/odb-2.4.0-i686-macosx/etc/odb/: default.options
3rd/odb-2.4.0-i686-macosx/lib/odb/i686-apple-darwin10/: manifest
3rd/odb-2.4.0-i686-macosx/lib/odb/i686-apple-darwin10/include/c++/4.9.3/i686-apple-darwin10/bits/: c++config.h
3rd/odb-2.4.0-i686-macosx/lib/odb/i686-apple-darwin10/include/c++/4.9.3/i686-apple-darwin10/x86_64/bits/: c++config.h
3rd/odb-2.4.0-i686-macosx/lib/odb/i686-apple-darwin10/lib/: libasan.dylib  libatomic.dylib  libcilkrts.dylib  libgcc_ext.10.4.dylib  libgcc_ext.10.5.dylib  libgcc_s_ppc64.1.dylib  libitm.1.dylib  libquadmath.dylib  libstdc++.a-gdb.py  libstdc++.dylib  libubsan.dylib
3rd/odb-2.4.0-i686-macosx/lib/odb/i686-apple-darwin10/lib/gcc/i686-apple-darwin10/4.9.3/plugin/: gtype.state
3rd/odb-2.4.0-i686-macosx/lib/odb/i686-apple-darwin10/lib/gcc/i686-apple-darwin10/4.9.3/plugin/include/: auto-host.h  configargs.h  insn-codes.h  tm.h
3rd/odb-2.4.0-i686-macosx/lib/odb/i686-apple-darwin10/lib/i386/: libstdc++.6.dylib
3rd/odb-2.4.0-i686-macosx/lib/odb/i686-apple-darwin10/lib/pkgconfig/: libodb-boost.pc  libodb-qt.pc
3rd/odb-2.4.0-i686-macosx/lib/odb/i686-apple-darwin10/lib/x86_64/: libasan.dylib  libatomic.dylib  libcilkrts.dylib  libitm.1.dylib  libquadmath.0.dylib  libstdc++.a-gdb.py  libstdc++.dylib  libubsan.dylib
3rd/odb-2.4.0-i686-macosx/lib/odb/i686-apple-darwin10/libexec/gcc/i686-apple-darwin10/4.9.3/: collect2  lto-wrapper
3rd/odb-2.4.0-i686-macosx/lib/odb/i686-apple-darwin10/libexec/gcc/i686-apple-darwin10/4.9.3/install-tools/: fixincl  mkheaders
3rd/odb-2.4.0-i686-macosx/lib/odb/i686-apple-darwin10/libexec/gcc/i686-apple-darwin10/4.9.3/plugin/: gengtype
3rd/odb-2.4.0-i686-macosx/lib/odb/i686-apple-darwin10/share/info/: cpp.info  cppinternals.info  dir  gcc.info  gccinstall.info  gccint.info  libitm.info  libquadmath.info
3rd/odb-2.4.0-i686-macosx/lib/odb/i686-apple-darwin10/share/man/man1/: cpp.1  gcc.1  gcov.1
3rd/odb-2.4.0-i686-macosx/lib/odb/i686-apple-darwin10/share/man/man7/: fsf-funding.7  gfdl.7  gpl.7
3rd/odb-2.4.0-i686-windows/: README
3rd/odb-2.4.0-i686-windows/etc/odb/: default.options
3rd/odb-2.4.0-i686-windows/mingw/: manifest.txt
beautylog/: CMakeLists.txt
beautylog/include/beautylog/: beautylog.hpp
beautylog/src/: beautylog.cpp
cmake/: odb.cmake
database/: CMakeLists.txt  database.cpp  database.hpp  my-traits.hxx  pooldb.hxx
src/: main.cpp
utility/: CMakeLists.txt
utility/include/: security.hpp
utility/src/: security.cpp
